# IMGUI_V1

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md  build.gradle  gradle.properties  local.properties  settings.gradle
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: android-ci.yml  codeql-analysis.yml  codeql.yml  performance-test.sh  security-test.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  ESP.h  MENU.h  SDK.hpp  SKIN.h  main.cpp
app/src/main/cpp/Data_File/: ESP.h  timer2.h
app/src/main/cpp/Data_Folder/Helper/: Spoof.h.bak  Tools.h.bak
app/src/main/cpp/Data_Folder/Time/: Time.cpp.bak
app/src/main/cpp/SDK/: NRG_ACLPlugin_classes.hpp  NRG_ACLPlugin_structs.hpp  NRG_AIModule_classes.hpp  NRG_AIModule_functions.cpp  NRG_AIModule_parameters.hpp  NRG_AIModule_structs.hpp  NRG_AI_classes.hpp  NRG_AI_functions.cpp  NRG_AI_parameters.hpp  NRG_AI_structs.hpp  NRG_ActorSequence_classes.hpp  NRG_ActorSequence_functions.cpp  NRG_ActorSequence_parameters.hpp  NRG_ActorSequence_structs.hpp  NRG_Addons_classes.hpp  NRG_Addons_functions.cpp  NRG_Addons_parameters.hpp  NRG_Addons_structs.hpp  NRG_AkAudio_classes.hpp  NRG_AkAudio_functions.cpp  NRG_AkAudio_parameters.hpp  NRG_AkAudio_structs.hpp  NRG_AndroidDeviceProfileSelector_classes.hpp  NRG_AndroidDeviceProfileSelector_structs.hpp  NRG_AndroidMediaFactory_classes.hpp  NRG_AndroidPermission_classes.hpp  NRG_AndroidPermission_functions.cpp  NRG_AndroidPermission_parameters.hpp  NRG_AndroidRuntimeSettings_classes.hpp  NRG_AndroidRuntimeSettings_structs.hpp  NRG_AnimGraphRuntime_classes.hpp  NRG_AnimGraphRuntime_functions.cpp  NRG_AnimGraphRuntime_parameters.hpp  NRG_AnimGraphRuntime_structs.hpp  NRG_AnimationBudgetAllocator_classes.hpp  NRG_AnimationBudgetAllocator_functions.cpp  NRG_AnimationBudgetAllocator_parameters.hpp  NRG_AnimationBudgetAllocator_structs.hpp  NRG_AnimationCore_structs.hpp  NRG_ApexDestruction_classes.hpp  (+567 more)
app/src/main/java/com/bearmod/: GLES3JNIView.java  ImGui.java  Launcher.java  MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
